# openapi/openapi.yaml
@@ -54,7 +54,7 @@ paths:
       deprecated: false
     delete:
       summary: Players_DELETE
-      description: De-registeres all players.
+      description: De-registers all players.
       operationId: pylgrum.pylgrum_server.delete_players
       responses:
         '200':
@@ -93,8 +93,53 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PlayerNotFoundError'
+                $ref: '#/components/schemas/NotFoundError'
       deprecated: false
+  /games/{game_id}:
+    post:
+      summary: Game_POST
+      description: Get current status of a game.
+      operationId: pylgrum.pylgrum_server.game_status
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                player:
+                  $ref: '#/components/schemas/Player'
+              required:
+                - player
+      parameters:
+        - name: game_id
+          in: path
+          description: ID of the game being played
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Game status returned
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
+        '401':
+          description: Unauthorized
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedError'
+        '404':
+          description: Requested game ID not found
+          headers: {}
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFoundError'
 components:
   schemas:
     Player:
@@ -106,8 +151,6 @@ components:
           format: int32
         name:
           type: string
-      required:
-        - id
     Card:
       title: Card
       type: object
@@ -119,6 +162,33 @@ components:
       required:
         - suit
         - card
+    Hand:
+      title: Hand
+      type: array
+      items:
+        $ref: '#/components/schemas/Card'
+      minItems: 10
+      maxItems: 10
+    Game:
+      title: Game
+      type: object
+      properties:
+        game_id:
+          type: integer
+          format: int32
+        description:
+          type: string
+        current_player:
+          $ref: '#/components/schemas/Player'
+        discard_showing:
+          $ref: '#/components/schemas/Card'
+        hand:
+          $ref: '#/components/schemas/Hand'
+      required:
+        - game_id
+        - current_player
+        - discard_showing
+        - hand
     PublicMove:
       title: PublicMove
       type: object
@@ -136,17 +206,14 @@ components:
           type: string
         card_discarded:
           type: string
-    Game:
-      title: Game
+    UnauthorizedError:
+      title: Unauthorized request error
       type: object
       properties:
-        game_id:
-          type: integer
-          format: int32
-        description:
+        details:
           type: string
-    PlayerNotFoundError:
-      title: Player not found error
+    NotFoundError:
+      title: Object not found error
       type: object
       properties:
         player:
