# pylgrum/pylgrum_server.py
@@ -9,6 +9,11 @@ PLAYERS = {} # hash of id->{game: id, name: str, player: Player}
 NEXT_GAME_ID = 1
 GAMES = {}   # hash of id->Game
 
+#### FIXME
+# - name/id thing for players is a mess
+# - add auth
+# - can these be driven by a set of game/player subclasses that emit the expected JSON?
+
 def list_players():
     global PLAYERS
 
@@ -42,7 +47,12 @@ def create_game(body):
     global GAMES
 
     ## make sure player is legit/defined (else 403)
-    player_id = body['player']['id']
+    try:
+        player_id = body['player']['id']
+    except KeyError:
+        return {
+            'details': 'player not specified'
+        }, 403
     if player_id not in PLAYERS.keys():
         print("registered players: {}".format(PLAYERS.keys()))
         return {
@@ -78,8 +88,8 @@ def create_game(body):
         }, 403
 
     ## create game
-    PLAYERS[player_id]['player'] = Player()
-    PLAYERS[opponent_id]['player'] = Player()
+    PLAYERS[player_id]['player'] = Player(name=PLAYERS[player_id]['name'])
+    PLAYERS[opponent_id]['player'] = Player(name=PLAYERS[opponent_id]['name'])
     game = Game(PLAYERS[player_id]['player'], PLAYERS[opponent_id]['player'])
     description = "game between {}({}) and {}({})".format(
         PLAYERS[player_id]['name'],
@@ -97,6 +107,55 @@ def create_game(body):
     return {
         'description': description,
         'id': new_game
+    }, 200
+
+def game_status(game_id, body):
+    if game_id not in GAMES.keys():
+        return {
+            'game': {
+                'id': game_id
+            },
+            'details': 'game not found'
+        }, 404
+
+    # the 'hand' part of status depends on who's asking
+    player_in_specified_game = False
+    errstr = ""
+    try:
+        player_id = body['player']['id']
+    except KeyError:
+        errstr = "Request from non-existent player"
+    else:
+        try:
+            if PLAYERS[player_id]['game'] == game_id:
+                player_in_specified_game = True
+        except KeyError:
+            errstr = "Player ID {} requesting status on unrelated game {}".format(
+                        player_id, game_id
+            )
+    if not player_in_specified_game:
+        return {
+            'details': errstr
+        }, 401
+
+    if PLAYERS[player_id]['name'] == GAMES[game_id].player1.name:
+        hand = GAMES[game_id].player1.hand
+    elif PLAYERS[player_id]['name'] == GAMES[game_id].player2.name:
+        hand = GAMES[game_id].player2.hand
+    else:
+        errstr = "seemingly impossible error - player in game but w/ mismatched name"
+        print(errstr)
+        return {"error": errstr}, 401
+
+    return {
+        'game_id': game_id,
+        'description': "game between {} and {}".format(GAMES[game_id].player1.name, GAMES[game_id].player2.name),
+        'current_player': GAMES[game_id].current_player.name,
+        'discard_showing': {
+            'suit': str(GAMES[game_id].discard_showing.suit),
+            'card': str(GAMES[game_id].discard_showing.rank)
+        },
+        'hand': [{"suit": str(x.suit), "rank": str(x.rank)} for x in hand.cards]
     }, 200
 
 # @app.route('/games/<int:game_id>/move/<int:move_id>', methods=['GET'])
